--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -18,20 +18,20 @@
         <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     {% endif %}
 </head>
-<body class="bg-background dark:bg-background-dark transition-all duration-300 font-base">
+<body class="min-w-sm bg-background dark:bg-background-dark transition-all duration-300 font-base">
 
 <header>
-    <nav class="nav-style">
+    <nav class="nav-style ">
 
         <div class="flex justify-around items-center">
             <!-- Левая часть -->
             <div class="flex items-center gap-5">
                 {% if VITE_DEV_MODE %}
                     <img src="http://localhost:5173/src/file_creator/img/file_creator_eating.ico" alt="Логотип"
-                         class="h-30 w-30 animate-bounce">
+                         class="h-15 w-15 md:h-30 md:w-30 animate-bounce">
                 {% else %}
                     <img src="{% static 'file_creator/img/file_creator_eating.ico' %}" alt="Логотип"
-                         class="h-30 w-30 animate-bounce">
+                         class="h-15 w-15 md:h-30 md:w-30 animate-bounce">
                 {% endif %}
 
                 <h1>Lazy Ilia</h1>
@@ -40,11 +40,11 @@
             <!-- Меню (десктоп) -->
             <div class="hidden lg:flex items-center gap-2">
                 <a id="a-main" href="{% url 'file_creator:file-creator-start' %}"
-                class="a-style">Главная</a>
+                   class="a-style">Главная</a>
                 <a id="a-cities" href="{% url 'cities:base_template' %}"
-                class="a-style">Города</a>
+                   class="a-style">Города</a>
                 <a href="#"
-                class="a-style">Статистика</a>
+                   class="a-style">Статистика</a>
                 <!-- Форма для выхода -->
                 <form action="{% url 'myauth:logout' %}" method="POST" class="inline">
                     {% csrf_token %}
@@ -60,10 +60,10 @@
             <div class="flex items-center gap-5">
                 <!-- Бургер (моб) -->
                 <button id="burger-menu"
-                        class="relative flex flex-col justify-between items-center p-2 h-12 w-16 lg:hidden group hover:scale-110 transition-all duration-500 [.open]:rotate-180">
-                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-200 ease-in-out group-[.open]:rotate-45  origin-center  group-[.open]:translate-y-[15px]"></span>
+                        class="relative flex flex-col justify-between items-center p-2 h-8 w-10 md:h-12 md:w-16 lg:hidden group hover:scale-110 transition-all duration-500 [.open]:rotate-180">
+                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-200 ease-in-out group-[.open]:rotate-45  origin-center group-[.open]:translate-y-[7px]  md:group-[.open]:translate-y-[15px]"></span>
                     <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-200 ease-in-out group-[.open]:hidden "></span>
-                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-200 ease-in-out group-[.open]:-rotate-45 origin-center  group-[.open]:-translate-y-[15px]"></span>
+                    <span class="block w-full h-0.5 bg-accent dark:bg-accent-dark transition-all duration-200 ease-in-out group-[.open]:-rotate-45 origin-center group-[.open]:-translate-y-[7px]  md:group-[.open]:-translate-y-[15px]"></span>
 
                 </button>
                 <!-- Переключатель темы -->
