--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -11,29 +11,29 @@
         <li class="step li-style li-style-active" data-step="1">
             <span>1</span>
             <div>
-                <h3 class="font-semibold leading-tight">Загрузка файлов</h3>
-                <p class="text-sm">Добавление файлов на обработку</p>
+                <h3 class="leading-tight">Загрузка файлов</h3>
+                <p>Добавление файлов на обработку</p>
             </div>
         </li>
         <li class="step li-style" data-step="2">
             <span>2</span>
             <div>
-                <h3 class="font-semibold leading-tight">Подготовка ответ</h3>
-                <p class="text-sm">Анализ ответа от сервера</p>
+                <h3 class="leading-tight">Подготовка ответ</h3>
+                <p>Анализ ответа от сервера</p>
             </div>
         </li>
         <li class="step li-style" data-step="3">
             <span>3</span>
             <div>
-                <h3 class="font-semibold leading-tight">Обработанные файлы</h3>
-                <p class="text-sm">Проверка полученных документов от сервера.</p>
+                <h3 class="leading-tight">Обработанные файлы</h3>
+                <p>Проверка полученных документов от сервера.</p>
             </div>
         </li>
         <li class="step li-style " data-step="4">
             <span>4</span>
             <div>
-                <h3 class="font-semibold leading-tight">Сохранение документов</h3>
-                <p class="text-sm">Сохранение документов</p>
+                <h3 class="leading-tight">Сохранение документов</h3>
+                <p>Сохранение документов</p>
             </div>
         </li>
     </ol>
@@ -44,7 +44,8 @@
          class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style show gap-3 transition-transform mt-2">
         <div id="server-error" class="hidden common_error"
              role="alert">
-            <svg class="shrink-0 inline w-4 h-4 md:w-6 md:h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg"
                  fill="currentColor" viewBox="0 0 20 20">
                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
             </svg>
@@ -56,7 +57,8 @@
         </div>
         <div id="server-info" class="hidden common_info"
              role="info">
-            <svg class="shrink-0 inline w-4 h-4 md:w-6 md:h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg"
                  fill="currentColor" viewBox="0 0 20 20">
                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
             </svg>
@@ -71,15 +73,18 @@
             </div>
         </div>
         <h2>Загрузка файлов</h2>
-        <p class="text-sm md:text-md text-text dark:text-text-dark font-medium">Сначало нужно выбрать файлы, которые необходимо
+        <p>Сначало нужно выбрать файлы, которые
+            необходимо
             обработать. </p>
-        <div class="flex gap-3 text-warning dark:text-warning-dark font-semibold">
+        <div class="flex gap-2 items-center warning_message">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                 stroke="currentColor" class="size-12">
+                 stroke="currentColor" class="shrink-0 inline size-5 md:size-7 me-3">
                 <path stroke-linecap="round" stroke-linejoin="round"
                       d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"></path>
             </svg>
-            <p class="text-xs md:text-md">Не переживай! Если что-то пойдет не так, нужно лишь перезагрузить страницу и попробовать заново!</p>
+            <span>Не переживай! Если что-то пойдет не так, нужно лишь перезагрузить страницу и
+                попробовать заново!</span>
+
         </div>
         <div id="upload-spinner" class="hidden flex items-center justify-center mt-4">
             <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
@@ -113,7 +118,7 @@
                 <label id="start-number-label" for="start-number" class="correct_label">Начальный
                     номер</label>
                 <input type="number" name="start_number" id="start-number" min="1"
-                       class="correct_input">
+                       class="correct_input" placeholder="Номер больше нуля">
             </div>
             <p id="start-number-error" class="hidden error_message">Введите число больше
                 нуля.</p>
@@ -136,7 +141,7 @@
             <div class="flex justify-start items-center gap-5">
                 <input id="same_number" name="same_number" type="checkbox"
                        class="correct_icon rounded-full text-xl" checked>
-                <label for="same_number" class="correct_label text-md">Основной и
+                <label for="same_number" class="correct_label">Основной и
                     подписной номер одинаковы</label>
             </div>
 
@@ -162,7 +167,7 @@
          class="!max-w-6xl mx-auto form-style hidden gap-3 transition-transform mt-2">
         <div id="server-error2" class="hidden common_error"
              role="alert">
-            <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                  fill="currentColor" viewBox="0 0 20 20">
                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
             </svg>
@@ -188,28 +193,28 @@
                 </div>
             </div>
         </div>
-        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Проверка и редактирование содержимого</h2>
-        <p class="text-md text-text dark:text-text-dark font-medium">
+        <h2>Проверка и редактирование содержимого</h2>
+        <p>
             Выберите файл из списка слева и отредактируйте его содержимое.
         </p>
         <button id="save-content"
-                class="btn-submit !w-4/12 disabled:opacity-50"
+                class="btn-submit !w-auto disabled:opacity-50"
                 disabled>
-            Сохранить все изменения разом.
+            Сохранить все изменения разом
         </button>
         <div id="upload-spinner3" class="hidden flex items-center justify-center mt-4">
             <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
             <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-4">
+        <div class="grid grid-cols-1 md:grid-cols-3  md:gap-6 mt-4">
 
             <!-- Левая колонка: список файлов -->
-            <div class="col-span-1 ">
+            <div class="col-span-1">
                 <div id="left-col"
                      class="sticky top-20 bg-background dark:bg-background-dark rounded-2xl  shadow-md gap-2">
 
-                    <h3 class="text-lg font-semibold text-text dark:text-text-dark p-4 border-b-3 border-accent">Список
+                    <h3 class="p-4 border-b-3 border-accent">Список
                         файлов</h3>
 
 
@@ -241,7 +246,7 @@
             <div class="col-span-2 ">
                 <div id="right-col"
                      class="bg-background dark:bg-background-dark rounded-2xl shadow-md flex flex-col gap-2">
-                    <h3 class="text-lg font-semibold text-text dark:text-text-dark p-4 border-b-3 border-accent">
+                    <h3 class="p-4 border-b-3 border-accent">
                         Содержимое документа</h3>
                     <label for="file-content"></label>
                     <textarea id="file-content"
@@ -249,7 +254,7 @@
                               placeholder="Содержимое документа..."
                               disabled></textarea>
                     <button id="save-edited-content"
-                            class="btn-submit self-end !w-4/12 text-sm mt-3 disabled:opacity-50"
+                            class="btn-submit md:self-end !w-auto disabled:opacity-50"
                             disabled>
                         Сохранить все изменения
                     </button>
