--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -102,13 +102,13 @@ p {
 
 .a-style {
     @apply text-surface dark:text-surface-dark
-    p-2 w-35 text-center text-sm md:text-xl font-medium rounded-xl transition-colors duration-200
+    p-2 w-35 text-center text-base md:text-xl font-medium rounded-xl transition-colors duration-200
     hover:bg-accent dark:hover:bg-accent-dark;
 }
 
 .burger-button {
     @apply block text-surface dark:text-surface-dark
-    p-2 text-sm md:text-xl w-full text-left font-medium
+    p-2 text-sm md:text-base w-full text-left font-medium
     rounded-xl transition-colors duration-200
     hover:bg-accent dark:hover:bg-accent-dark;
 }
@@ -154,6 +154,15 @@ p {
     focus:outline-none focus:ring-3 focus:ring-error/50 dark:focus:ring-error
     text-sm md:text-base;
 }
+.btn-delete {
+    @apply flex items-center justify-center gap-1
+    w-3/10 py-1 text-text-dark rounded-lg
+    bg-error dark:bg-error-dark
+    hover:bg-error-dark dark:hover:bg-error
+    transition-colors duration-300 active:scale-95
+    focus:outline-none focus:ring-3 focus:ring-error/50 dark:focus:ring-error
+    text-xs md:text-sm;
+}
 
 .correct_label {
     @apply text-text dark:text-text-dark
@@ -167,6 +176,7 @@ p {
 
 .correct_input {
     @apply rounded-lg transition-all
+        w-full
     border border-form-color dark:border-form-color-dark
     text-text dark:text-text-dark
     bg-background dark:bg-background-dark
@@ -187,7 +197,7 @@ p {
 }
 
 .correct_icon {
-    @apply size-6 text-accent dark:text-accent-dark
+    @apply size-5 md:size-7 text-accent dark:text-accent-dark
 }
 
 .error_icon {
@@ -197,6 +207,14 @@ p {
 .error_message {
     @apply pt-2 pl-5
     text-error dark:text-error-dark
+    text-xs md:text-sm;
+
+}
+
+.warning_message {
+    @apply
+    font-semibold
+    text-warning dark:text-warning-dark
     text-xs md:text-sm;
 
 }
@@ -354,7 +372,9 @@ p {
 }
 
 .file-name {
-    @apply cursor-pointer transition-colors duration-200 gap-3;
+    @apply cursor-pointer transition-colors
+    duration-200 gap-3
+    text-sm md:text-base;
 }
 
 .textarea-custom {
@@ -365,7 +385,7 @@ p {
     border border-primary dark:border-primary-dark
     focus:ring-2 focus:ring-accent dark:focus:ring-accent-dark
     overflow-hidden
-    text-sm md:text-base
+    text-xs md:text-base
     ;
 }
 
