--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -6,22 +6,29 @@
 {% endblock %}
 
 {% block body %}
-    <div class="flex justify-center">
-        <div class="form-style ">
-            <h2>Поиск по городам</h2>
-            <label for="searchInput">
-                Вводи инфу
-            </label><input
-                id="searchInput"
-                type="text"
-                placeholder="Введите название города"
-                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
-        >
-            <ul id="resultsList" class="mt-4 space-y-2">
-                <!-- JS будет рендерить сюда -->
-            </ul>
+    <div class="h-screen grid place-items-start pt-[5%]">
+        <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
+            <h2 class="text-center">Поиск по городам</h2>
+
+            <form class="w-full">
+                <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6 correct_icon">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"></path>
+                        </svg>
+
+                    </div>
+                    <input type="search" id="default-search"
+                           class="ps-12 w-full correct_input"
+                           placeholder="Введи какой-то адресок" required/>
+                </div>
+            </form>
         </div>
     </div>
+
 {% endblock %}
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
