--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -9,7 +9,7 @@
     <div class="pt-[5%]">
         <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
             <h2 class="text-center">Поиск по городам</h2>
-
+            <p id="counter" class="w-sm mx-auto mt-5 text-center text-text dark:text-text-dark hidden">Найдено совпадений</p>
             <form class="w-full" onsubmit="return false;">
                 <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
                 <div class="relative">
@@ -32,6 +32,8 @@
             </form>
         </div>
     </div>
+
+
 
     <div id="city-cards" class="mt-4 space-y-4 grid grid-cols-1 lg:grid-cols-2 gap-4"></div>
 
