--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -35,7 +35,7 @@
 
 
 
-    <div id="city-cards" class="mt-4 space-y-4 grid grid-cols-1 lg:grid-cols-2 gap-4"></div>
+    <div id="city-cards" class="mt-10 grid grid-cols-1 lg:grid-cols-2 gap-y-3 gap-x-5 "></div>
 
 
 {% endblock %}
