--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -9,7 +9,7 @@
     <div class="pt-[5%]">
         <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
             <h2 class="text-center">Поиск по городам</h2>
-            <p id="counter" class="w-sm mx-auto mt-5 text-center text-text dark:text-text-dark hidden">Найдено
+            <p id="counter" class="w-sm mx-auto mt-5 text-center text-text dark:text-text-dark opacity-0">Найдено
                 совпадений</p>
             <form class="w-full" onsubmit="return false;">
                 <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
@@ -31,30 +31,54 @@
                         class="absolute z-10 bg-white border border-gray-300 w-full max-h-48 overflow-y-auto hidden"></ul>
                 </div>
             </form>
+            <div id="city-cards" class="mt-10 grid grid-cols-1 lg:grid-cols-2  gap-y-3 gap-x-3 "></div>
         </div>
     </div>
 
 
 
-    <div id="city-cards" class="mt-10 grid grid-cols-1 lg:grid-cols-2 gap-y-3 gap-x-5 "></div>
+
 
     <div id="city-modal"
-         class="hidden fixed top-0 left-0 w-full h-full bg-black bg-opacity-50 flex items-center justify-center z-50">
-        <div class="bg-white p-6 rounded-xl w-[90%] max-w-lg">
-            <form class="space-y-3">
-                <input id="modal-location" type="text" placeholder="Город" class="w-full border p-2 rounded"/>
-                <input id="modal-name_organ" type="text" placeholder="Организация" class="w-full border p-2 rounded"/>
-                <input id="modal-pseudonim" type="text" placeholder="Псевдоним" class="w-full border p-2 rounded"/>
-                <input id="modal-work_time" type="text" placeholder="Время работы" class="w-full border p-2 rounded"/>
-                <input id="modal-table_id" type="text" placeholder="Номер раздела" class="w-full border p-2 rounded"/>
-                <input id="modal-some_number" type="text" placeholder="Номер в таблице"
-                       class="w-full border p-2 rounded"/>
-                <input id="modal-ip_address" type="text" placeholder="IP address" class="w-full border p-2 rounded"/>
+         class="hidden fixed inset-0 z-50 flex items-center justify-center">
+        <!-- Размытие фона -->
+        <div class="absolute inset-0 bg-background/80 dark:bg-background-dark/80 backdrop-blur-sm"></div>
+        <!-- Форма (не размытая) -->
+        <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-lg min-w-sm w-full z-10">
+            <form class="form-style">
+                <div>
+                    <label for="modal-location" class="block mb-2 correct_label">Адрес</label>
+                    <input id="modal-location" type="text" placeholder="Город" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-name_organ" class="block mb-2 correct_label">Наименование органа</label>
+                    <input id="modal-name_organ" type="text" placeholder="Организация" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-pseudonim" class="block mb-2 correct_label">Псевдоним</label>
+                    <input id="modal-pseudonim" type="text" placeholder="Псевдоним" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-work_time" class="block mb-2 correct_label">Рабочее время</label>
+                    <input id="modal-work_time" type="text" placeholder="Время работы" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-table_id" class="block mb-2 correct_label">Название таблицы</label>
+                    <input id="modal-table_id" type="text" placeholder="Номер раздела" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-some_number" class="block mb-2 correct_label">Спец номер</label>
+                    <input id="modal-some_number" type="text" placeholder="Номер в таблице" class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-ip_address" class="block mb-2 correct_label">IP address</label>
+                    <input id="modal-ip_address" type="text" placeholder="IP address" class="correct_input"/>
+                </div>
             </form>
             <div class="flex justify-end gap-3 mt-4">
-                <button id="save-city" class="bg-blue-600 text-white px-4 py-2 rounded">Сохранить</button>
-                <button id="delete-city" class="bg-red-600 text-white px-4 py-2 rounded">Удалить</button>
-                <button id="close-modal" class="bg-gray-400 text-white px-4 py-2 rounded">Отмена</button>
+                <button id="save-city" class="btn-submit">Сохранить</button>
+                <button id="delete-city" class="btn-delete !w-full !font-semibold">Удалить</button>
+                <button id="close-modal" class="btn-cancel ">Отмена</button>
             </div>
         </div>
     </div>
