--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -6,6 +6,20 @@
 {% endblock %}
 
 {% block body %}
+    <div id="server-error" class="hidden common_error"
+         role="alert">
+        <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+             xmlns="http://www.w3.org/2000/svg"
+             fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+        </svg>
+        <span class="sr-only">Info</span>
+        <div>
+            <span class="!font-bold">Danger alert!</span>
+            <p>Change a few things up and try submitting again.</p>
+        </div>
+    </div>
+
     <div class="pt-[5%]">
         <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
             <h2 class="text-center">Поиск по городам</h2>
@@ -44,8 +58,11 @@
         <!-- Размытие фона -->
         <div class="absolute inset-0 bg-background/80 dark:bg-background-dark/80 backdrop-blur-sm"></div>
         <!-- Форма (не размытая) -->
-        <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-lg min-w-sm w-full z-10">
-            <form class="form-style">
+        <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-2xl min-w-sm w-full z-10">
+
+
+            <form class="form-style !max-w-2xl">
+                {% csrf_token %}
                 <div>
                     <label for="modal-location" class="block mb-2 correct_label">Адрес</label>
                     <input id="modal-location" type="text" placeholder="Город" class="correct_input"/>
@@ -63,13 +80,21 @@
                     <input id="modal-work_time" type="text" placeholder="Время работы" class="correct_input"/>
                 </div>
                 <div>
-                    <label for="modal-table_id" class="block mb-2 correct_label">Название таблицы</label>
-                    <input id="modal-table_id" type="text" placeholder="Номер раздела" class="correct_input"/>
+                    <label for="modal-table_name" class="block mb-2 correct_label">Название таблицы</label>
+                    <input id="modal-table_name" readonly type="text" placeholder="Номер раздела"
+                           class="correct_input"/>
+                </div>
+                <div>
+                    <label for="modal-number" class="block mb-2 correct_label">Номер записи в таблице</label>
+                    <input id="modal-number" readonly type="text" placeholder="Порядковый номер"
+                           class="correct_input"/>
                 </div>
                 <div>
                     <label for="modal-some_number" class="block mb-2 correct_label">Спец номер</label>
-                    <input id="modal-some_number" type="text" placeholder="Номер в таблице" class="correct_input"/>
+                    <input id="modal-some_number" type="text" placeholder="Спец номер"
+                           class="correct_input"/>
                 </div>
+
                 <div>
                     <label for="modal-ip_address" class="block mb-2 correct_label">IP address</label>
                     <input id="modal-ip_address" type="text" placeholder="IP address" class="correct_input"/>
