--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -180,7 +180,7 @@
                 <p>Change a few things up and try submitting again.</p>
             </div>
         </div>
-        <div id="server-info2" class="hidden common_info max-w-md justify-center mx-auto"
+        <div id="server-info2" class="hidden common_info w-full justify-center md:justify-start mx-auto"
              role="alert">
             <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                  fill="currentColor" viewBox="0 0 20 20">
@@ -210,7 +210,7 @@
             <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3  md:gap-6 mt-4">
+        <div class="grid grid-cols-1 lg:grid-cols-3  md:gap-6 mt-4">
 
             <!-- Левая колонка: список файлов -->
             <div class="col-span-1">
