--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -19,6 +19,21 @@
             <p>Change a few things up and try submitting again.</p>
         </div>
     </div>
+    <div id="server-info" class="hidden common_info"
+         role="info">
+        <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+             xmlns="http://www.w3.org/2000/svg"
+             fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+        </svg>
+        <span class="sr-only">Info</span>
+        <div>
+            <span class="!font-bold">Info alert!</span>
+{#            <h3 class="text-text dark:text-text-dark">Сообщение</h3>#}
+            <p class="text-text dark:text-text-dark">Change a few things up and try submitting again.</p>
+{#            <div id="btn-div" class="flex justify-center gap-3 mt-3"></div>#}
+        </div>
+    </div>
 
     <div class="pt-[5%]">
         <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
