--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load user_filters %}
 
 
 <!DOCTYPE html>
@@ -45,9 +46,10 @@
                    class="a-style">Города</a>
                 <a href="#"
                    class="a-style">Статистика</a>
-                <a href="{% url 'cities:admin_city' %}"
-                   class="a-style">Админ</a>
-
+                {% if user.is_superuser or user|in_group:"admin" %}
+                    <a href="{% url 'cities:admin_city' %}"
+                       class="a-style">Админ</a>
+                {% endif %}
                 <!-- Форма для выхода -->
                 <form action="{% url 'myauth:logout' %}" method="POST" class="inline">
                     {% csrf_token %}
@@ -95,8 +97,10 @@
                class="burger-button">Города</a>
             <a href="#"
                class="burger-button">Статистика</a>
-            <a href="{% url 'cities:admin_city' %}"
-               class="burger-button">Админ</a>
+            {% if user.is_superuser or user|in_group:"admin" %}
+                <a href="{% url 'cities:admin_city' %}"
+                   class="burger-button">Админ</a>
+            {% endif %}
             <!-- Форма для выхода -->
             <form action="{% url 'myauth:logout' %}" method="POST" class="block">
                 {% csrf_token %}
