--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -29,9 +29,9 @@
         <span class="sr-only">Info</span>
         <div>
             <span class="!font-bold">Info alert!</span>
-{#            <h3 class="text-text dark:text-text-dark">Сообщение</h3>#}
-            <p class="text-text dark:text-text-dark">Change a few things up and try submitting again.</p>
-{#            <div id="btn-div" class="flex justify-center gap-3 mt-3"></div>#}
+            <h3 class="text-text dark:text-text-dark"></h3>
+            <p class="text-text dark:text-text-dark"></p>
+            <div id="btn-div" class="flex justify-center gap-3 mt-3"></div>
         </div>
     </div>
 
@@ -118,11 +118,11 @@
             <div class="flex justify-end gap-3 mt-4">
                 <button id="save-city" class="btn-submit">Сохранить</button>
                 {% if is_admin %}
-                <button id="delete-city" class="btn-delete !w-full !font-semibold">Удалить</button>
+                    <button id="delete-city" class="btn-delete !w-full !font-semibold">Удалить</button>
                 {% else %}
-                <button id="delete-city" class="btn-delete !hidden !w-full !font-semibold" disabled>Удалить</button>
+                    <button id="delete-city" class="btn-delete !hidden !w-full !font-semibold" disabled>Удалить</button>
                 {% endif %}
-{#                <button id="delete-city" class="btn-delete !w-full !font-semibold">Удалить</button>#}
+                {#                <button id="delete-city" class="btn-delete !w-full !font-semibold">Удалить</button>#}
                 <button id="close-modal" class="btn-cancel ">Отмена</button>
             </div>
         </div>
