--- a/lazy_ilya/cities/templates/cities/admin-cities.html
+++ b/lazy_ilya/cities/templates/cities/admin-cities.html
@@ -6,99 +6,93 @@
 {% endblock %}
 
 {% block body %}
-    <h2 class="text-center">Панель управления Администратора</h2>
+    <div class="pt-5 md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
+        <h2 class="text-center">Панель управления Администратора</h2>
 
+        <div class="border border-primary dark:border-primary-dark rounded-t-xl overflow-hidden">
 
-    <div id="accordion-flush" data-accordion="collapse"
-         data-active-classes="bg-white dark:bg-gray-900 text-gray-900 dark:text-white"
-         data-inactive-classes="text-gray-500 dark:text-gray-400">
-        <h2 id="accordion-flush-heading-1">
-            <button type="button"
-                    class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
-                    data-accordion-target="#accordion-flush-body-1" aria-expanded="true"
-                    aria-controls="accordion-flush-body-1">
-                <span>What is Flowbite?</span>
-                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M9 5 5 1 1 5"/>
-                </svg>
-            </button>
-        </h2>
-        <div id="accordion-flush-body-1" class="hidden" aria-labelledby="accordion-flush-heading-1">
-            <div class="py-5 border-b border-gray-200 dark:border-gray-700">
-                <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is an open-source library of interactive
-                    components built on top of Tailwind CSS including buttons, dropdowns, modals, navbars, and more.</p>
-                <p class="text-gray-500 dark:text-gray-400">Check out this guide to learn how to <a
-                        href="/docs/getting-started/introduction/"
-                        class="text-blue-600 dark:text-blue-500 hover:underline">get started</a> and start developing
-                    websites even faster with components on top of Tailwind CSS.</p>
+            <!-- Аккордеон 1 -->
+            <div class="border-b border-primary dark:border-primary-dark">
+                <button class="accordion-style accordion-toggle">
+                    Файловое обновление
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="correct_icon">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"></path>
+                    </svg>
+                </button>
+                <div class="accordion-content max-h-0 accordion-style-content">
+                    <p class="py-3 text-secondary dark:text-secondary-dark">
+                        Данный блок предназначен для добавления файла со списком городов.
+                    </p>
+                    <div class="flex py-3 items-center warning_message">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="shrink-0 inline size-5 md:size-7 me-3">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"></path>
+                        </svg>
+                        <span>
+                            Файл должен быть с соответствующем названием globus.docx. Другие файлы не принимаются.
+                            После добавления файла и загрузки его на сервер будет произведена замена содержимого данных о городах.
+                        </span>
+
+                    </div>
+                    <form action="{% url 'cities:admin_city' %}"
+                          id="uploadForm" class="mt-4 space-y-3 max-w-lg mx-auto" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="file"
+                               name="file"
+                               id="fileInput"
+                               accept=".docx"
+                               required
+                               class="correct_input">
+                        <button type="submit"
+                                class="btn-submit">
+                            Загрузить файл
+                        </button>
+                        <p id="errorMessage" class="text-error dark:text-error-dark hidden">Имя файла должно быть
+                            <strong>globus.docx</strong>.
+                        </p>
+                    </form>
+
+                </div>
+
             </div>
-        </div>
-        <h2 id="accordion-flush-heading-2">
-            <button type="button"
-                    class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
-                    data-accordion-target="#accordion-flush-body-2" aria-expanded="false"
-                    aria-controls="accordion-flush-body-2">
-                <span>Is there a Figma file available?</span>
-                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M9 5 5 1 1 5"/>
-                </svg>
-            </button>
-        </h2>
-        <div id="accordion-flush-body-2" class="hidden" aria-labelledby="accordion-flush-heading-2">
-            <div class="py-5 border-b border-gray-200 dark:border-gray-700">
-                <p class="mb-2 text-gray-500 dark:text-gray-400">Flowbite is first conceptualized and designed using the
-                    Figma software so everything you see in the library has a design equivalent in our Figma file.</p>
-                <p class="text-gray-500 dark:text-gray-400">Check out the <a href="https://flowbite.com/figma/"
-                                                                             class="text-blue-600 dark:text-blue-500 hover:underline">Figma
-                    design system</a> based on the utility classes from Tailwind CSS and components from Flowbite.</p>
+
+            <!-- Аккордеон 2 -->
+            <div class="border-b border-primary dark:border-primary-dark">
+                <button class="accordion-style accordion-toggle">
+                    Форма обновления
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="correct_icon">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"></path>
+                    </svg>
+                </button>
+                <div class="accordion-content max-h-0 accordion-style-content">
+                    <p class="py-3 text-secondary dark:text-secondary-dark">Контент действия 1. Здесь может быть
+                        описание,
+                        кнопки и любые другие
+                        элементы.</p>
+                </div>
             </div>
-        </div>
-        <h2 id="accordion-flush-heading-3">
-            <button type="button"
-                    class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
-                    data-accordion-target="#accordion-flush-body-3" aria-expanded="false"
-                    aria-controls="accordion-flush-body-3">
-                <span>What are the differences between Flowbite and Tailwind UI?</span>
-                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M9 5 5 1 1 5"/>
-                </svg>
-            </button>
-        </h2>
-        <div id="accordion-flush-body-3" class="hidden" aria-labelledby="accordion-flush-heading-3">
-            <div class="py-5 border-b border-gray-200 dark:border-gray-700">
-                <p class="mb-2 text-gray-500 dark:text-gray-400">The main difference is that the core components from
-                    Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another
-                    difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers
-                    sections of pages.</p>
-                <p class="mb-2 text-gray-500 dark:text-gray-400">However, we actually recommend using both Flowbite,
-                    Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best
-                    of two worlds.</p>
-                <p class="mb-2 text-gray-500 dark:text-gray-400">Learn more about these technologies:</p>
-                <ul class="ps-5 text-gray-500 list-disc dark:text-gray-400">
-                    <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite
-                        Pro</a></li>
-                    <li><a href="https://tailwindui.com/" rel="nofollow"
-                           class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                </ul>
-            </div>
+
         </div>
     </div>
 
 
 
+
+
+
+
 {% endblock %}
 {% block extra_js %}
-    {#    {% if VITE_DEV_MODE %}#}
-    {#        <script type="module" src="http://localhost:5173/src/cities/js/main.js"></script>#}
-    {#    {% else %}#}
-    {#        <script type="module" crossorigin src="{% static 'cities/js/main.js' %}"></script>#}
-    {#    {% endif %}#}
+    {% if VITE_DEV_MODE %}
+        <script type="module" src="http://localhost:5173/src/cities/js/update-form.js"></script>
+    {% else %}
+        <script type="module" crossorigin src="{% static 'cities/js/update-form.js' %}"></script>
+    {% endif %}
     <script>
         window.citiesData = JSON.parse('{{ cities_json|escapejs }}');
     </script>
