--- a/lazy_ilya/cities/templates/cities/admin-cities.html
+++ b/lazy_ilya/cities/templates/cities/admin-cities.html
@@ -7,6 +7,34 @@
 
 {% block body %}
     <div class="pt-5 md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
+        <div id="server-error" class="hidden common_error"
+             role="alert">
+            <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Danger alert!</span>
+                <p>Change a few things up and try submitting again.</p>
+            </div>
+        </div>
+        <div id="server-info" class="hidden common_info"
+             role="info">
+            <svg class="shrink-0 inline size-5 md:size-7 me-3" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Info alert!</span>
+                <h3 class="text-text dark:text-text-dark"></h3>
+                <p class="text-text dark:text-text-dark"></p>
+                <div id="btn-div" class="flex justify-center gap-3 mt-3"></div>
+            </div>
+        </div>
         <h2 class="text-center">Панель управления Администратора</h2>
 
         <div class="border border-primary dark:border-primary-dark rounded-t-xl overflow-hidden">
@@ -37,6 +65,17 @@
                         </span>
 
                     </div>
+                    <!-- Контейнер загрузки -->
+                    <div id="upload-progress-container"
+                         class="hidden flex flex-col items-center justify-center mt-4 w-full">
+                        <!-- Линия прогресса -->
+                        <div class="w-full h-4 bg-gray-200 rounded-full overflow-hidden">
+                            <div id="upload-progress-bar" class="h-full bg-primary transition-all duration-300"
+                                 style="width: 0%;"></div>
+                        </div>
+                        <!-- Текст процентов -->
+                        <div id="upload-progress-text" class="mt-2 text-sm text-text dark:text-text-dark">0%</div>
+                    </div>
                     <form action="{% url 'cities:admin_city' %}"
                           id="uploadForm" class="mt-4 space-y-3 max-w-lg mx-auto" method="post"
                           enctype="multipart/form-data">
@@ -45,7 +84,6 @@
                                name="cityFile"
                                id="fileInput"
                                accept=".docx"
-                               required
                                class="correct_input">
                         <button type="submit"
                                 class="btn-submit">
