Разработка формы обновления записей городов

--- a/lazy_ilya/cities/templates/cities/admin-cities.html
+++ b/lazy_ilya/cities/templates/cities/admin-cities.html
@@ -70,7 +70,7 @@
                          class="hidden flex flex-col items-center justify-center mt-4 w-full">
                         <!-- Линия прогресса -->
                         <div class="w-full h-4 bg-gray-200 rounded-full overflow-hidden">
-                            <div id="upload-progress-bar" class="h-full bg-primary transition-all duration-300"
+                            <div id="upload-progress-bar" class="h-full bg-accent dark:bg-accent-dark transition-all duration-300"
                                  style="width: 0%;"></div>
                         </div>
                         <!-- Текст процентов -->
