--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -10,7 +10,7 @@
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
             <button id="theme-toggle" type="button"
-                    class="theme-toggle">
+                    class="theme-toggle" tabindex="-1">
                 <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
                      fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-8 h-8 hidden">
@@ -82,7 +82,7 @@
                     <label for="password" id="password-label"
                            class="block mb-2 font-medium correct_label">Пароль</label>
                     <a href="{% url 'myauth:reset-password' %}"
-                       class="text-sm text-primary dark:text-primary-dark hover:underline">Забыли пароль?</a>
+                       class="text-sm text-primary dark:text-primary-dark hover:underline" tabindex="-1">Забыли пароль?</a>
                 </div>
 
                 <div class="relative">
