--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -11,7 +11,7 @@
               class="relative form-style  opacity-0 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
-            <button id="theme-toggle" type="button" class="theme-toggle">
+            <button id="theme-toggle" type="button" class="theme-toggle" tabindex="-1">
                 <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                      stroke-width="1.5" stroke="currentColor" class="w-8 h-8 hidden">
                     <path stroke-linecap="round" stroke-linejoin="round"
